--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-rev": "^7.1.2",
     "gulp-rev-collector": "^1.0.5",
     "gulp-ruby-sass": "^2.1.1",
+    "gulp-sass": "^3.0.0",
     "gulp-tar": "^1.9.0",
     "gulp-uglify": "^2.0.0",
     "is-gif": "^1.0.0",
